--- a/gb/21/10/1/n13274832.md
+++ b/gb/21/10/1/n13274832.md
@@ -1,64 +1,49 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qxelqr3958/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qxelqr3958/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qxelqr3958/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qxelqr3958/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qxelqr3958/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qxelqr3958/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qxelqr3958/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qxelqr3958/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qxelqr3958/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qxelqr3958/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qxelqr3958/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qxelqr3958/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qxelqr3958/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qxelqr3958/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qxelqr3958/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>罗马尼亚医院COVID重症监护室火灾 7人丧生</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13274824-GettyImages-1235620588-600x400.jpg" />
-<h6>2021年10月1日，罗马尼亚康斯坦察的传染病医院，在有10名COVID-19患者接受治疗的重症监护室发生火灾，造成7人死亡。图为消防员和警察在疏散一名烧伤的患者。(COSTIN DINCA/AFP via Getty Images)
-</h6>
-<hr>
-	<p>【大纪元2021年10月01日讯】（大纪元记者戴芙若编译报导）周五（10月1日），<ahref="https://github.com/qxelqr3958/djy/blob/master/gb/tag/%E7%BD%97%E9%A9%AC%E5%B0%BC%E4%BA%9A.md#1">罗马尼亚</a>一家治疗COVID-19患者的<ahref="https://github.com/qxelqr3958/djy/blob/master/gb/tag/%E9%87%8D%E7%97%87%E7%9B%91%E6%8A%A4%E5%AE%A4.md#1">重症监护室</a>发生<ahref="https://github.com/qxelqr3958/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>，造成7人死亡。这是不到一年内罗马尼亚发生的第三起致命的医院火灾。</p>
-<p>视频片段显示，患者从医院较低层的窗户跳出，消防员将人抬出来。</p>
-<p>路透社报导，<ahref="https://github.com/qxelqr3958/djy/blob/master/gb/tag/%E7%BD%97%E9%A9%AC%E5%B0%BC%E4%BA%9A.md#1">罗马尼亚</a>急救部门最初表示有9人死亡，但交通部长博德（Lucian Bode）后来称，消防员和医院工作人员之间存在误解。</p>
-<p>格林威治标准时间周五早上7:55左右，消防队员在罗马尼亚东部城市康斯坦察（Constanta）的医院灭火，并从附近县调来了更多的消防团队。</p>
-<p>愤怒的患者亲属们聚集在医院外抗议，检察官已开始调查起火原因。</p>
-<p>今年2月，罗马尼亚首都布加勒斯特的一家COVID-19医院发生<ahref="https://github.com/qxelqr3958/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>，造成4名患者死亡。去年11月的另外一场火灾，有10人在皮亚特拉?尼亚姆茨（Piatra Neamt）县医院的<ahref="https://github.com/qxelqr3958/djy/blob/master/gb/tag/%E9%87%8D%E7%97%87%E7%9B%91%E6%8A%A4%E5%AE%A4.md#1">重症监护室</a>死亡。</p>
-<p>“我对这场悲剧感到震惊”，总统克劳斯?约翰尼斯周五在一份声明中说，“这是一出可怕的新剧，证实了罗马尼亚医疗系统基础设施的匮乏，第四波（病毒）大流行给它带来了难以想像的压力。”</p>
-<p>周五，罗马尼亚有超过12,500名COVID-19患者（包括373名儿童）在医院接受治疗，其中1,391名在重症监护室。</p>
-<p>同日，罗马尼亚新增感染COVID-19的人数达到10,887人，全国各地重症监护病房空间不足。罗马尼亚的疫苗接种率在欧盟27个国家中排名倒数第二。</p>
-<p>根据约翰?霍普金斯大学的统计数据，截至目前，罗马尼亚的COVID-19确诊病例数为1,233,668例，已有37,041染疫死亡。</p>
-<p>甚至在瘟疫大流行之前，罗马尼亚的医疗保健系统就已经面临压力，腐败、效率低下和政治化管理一直困扰着罗马尼亚。该国拥有欧盟最不发达的医疗保健基础设施之一。</p>
-<p>在过去的三十年里，罗马尼亚只新建了一家医院，在欧盟的医疗保健上花费最少，成千上万的医生和护士移民外流。</p>
-<p>责任编辑：林妍?#</p>
-	
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+
+<h6></h6>
+<hr>[replace]（<a href=<ahref;<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/eizauy3553/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/eizauy3553/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/eizauy3553/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/eizauy3553/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/29/n13268587.md#1">消息：疫情溯源 五眼联盟曾诱中共截听通话</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/29/n13269855.md#1">杨威：中共政治局学习透露的疫情信息</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/30/n13271284.md#1">【疫情9.30】纽约教师要求最高法阻疫苗令</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/10/1/n13274035.md#1">【疫情10.1】美最高法院大法官卡瓦诺染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/5/n13068048.md#1">火灾易发区屋主力保房险 自发防火改造</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/22/n13106302.md#1">法官：加州有权扩大火灾多发地房屋保险</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/20/n13174649.md#1">因加州野火撤离者 或可通过保险获额外生活费</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/8/n13218323.md#1">在野火地区买房 先问5个问题</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/6/n9929355.md#1" target="_blank">尹曙生：触目惊心的杀人运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/5/n10539350.md#1" target="_blank">中国奥运泳坛明星经历的人生巨变</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403580.md#1" target="_blank">共产暴政录：盛世才与国共两党的新疆分裂争夺战</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/24/n9888525.md#1" target="_blank">从瘫痪边缘走向健康 内科医生感恩李洪志先生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/24/n13258207.md#1">【百年真相】坠落凡间七仙女 严凤英文革生死劫</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/28/n13266900.md#1">【百年真相】《苦菜花》背后的真实故事</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/29/n13268154.md#1">美国女歌手曾目击UFO 世界观彻底改变</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/23/n13256297.md#1">挽救黄金家族、中兴蒙古汗国的满都海斯琴</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/26/n13261098.md#1">中华茶道之华 唐宋明三代人怎样喝茶？</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/30/n13272778.md#1">【横河观点】孙力军双开移交司法 反习是主因？</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/10/1/n13274209.md#1">【新闻大家谈】孙力军罪名三个“极度”触怒习？</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/10/1/n13274654.md#1">【古韵流芳】蒋捷《虞美人》婉转的生命歌谣</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/28/n13267528.md#1">【新闻看点】外交部成灵堂？孟晚舟立场早转变</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/29/n13268027.md#1">【翻墙必看】孟晚舟案更多丑闻曝光</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/28/n13267731.md#1">【中国观察】习近平和刘鹤 一左一右冲突？</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/28/n13267480.md#1">49岁黎姿带女儿挤地铁 气质温婉似少女</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/28/n13267702.md#1">林依晨证实已怀孕 预产期是10月底</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/30/n13270234.md#1">受邀参加大陆直播卖货 赵雅芝全程尴尬引热议</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/29/n13270004.md#1">43岁刘涛晒自拍照 搞笑喊“最近确实瘦了”</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/29/n13269816.md#1">林依晨挺9月孕肚当评审 4天看12部电影</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/30/n13270765.md#1">不知被通报失踪 醉汉加入搜寻自己的行列</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/29/n13268154.md#1">美国女歌手曾目击UFO 世界观彻底改变</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/28/n13267409.md#1">癌症最大原因是饮食 一表看懂不同癌症风险</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/29/n13268794.md#1">独居小岛逾30年 意大利8旬男子被迫搬到城市</a></li>
-<li><a href="https://github.com/qxelqr3958/djy/blob/master/gb/21/9/30/n13270991.md#1">美国小狗在棒球场跑垒 以21秒创世界纪录</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qxelqr3958/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qxelqr3958/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/1/n13274832.htm">罗马尼亚医院COVID重症监护室火灾 7人丧生</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/1/n13274832.htm"></a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qxelqr3958/djy/blob/master/gb/21/10/1/n13274832.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qxelqr3958/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qxelqr3958/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qxelqr3958/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qxelqr3958/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qxelqr3958/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/1/n13274832.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
